# WatGPT

./: .babelrc  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  db_runner.py  db_setup.py  db_utils.py  docker-compose.yml  pyproject.toml  read_calendar_pdf.py  read_structured_pdf.py  read_timetable.py  requirements.txt  timetable_scraper.py  wat_scraper.py
.github/workflows/: analysis.yml
config/: prompts.yaml
databases/: README.md  create_vector_db.done
front/: manifest.json  package-lock.json  package.json
front/src/: App.js
output_data/: dates_output_chunks.txt  debug_log.txt
watgpt/: api.py  constants.py  db_usage_example.py  llm_engine.py  read_structured_pdf.py  utils.py  wat_scraper.py
watgpt/db/: __init__.py  chunk_db.py  constants.py  database.py  db_setup.py  db_usage_example.py  db_utils.py  models.py  sql_db.py  vector_db.py
watgpt/reader/: __init__.py  read_calendar_pdf.py  read_structured_pdf.py
watgpt/scraper/: __init__.py  timetable_scraper.py  wat_scraper.py
watgpt/scraper/watscraper/: output.json
watgpt/scraper/watscraper/watscraper/: items.py  middlewares.py  pipelines.py  settings.py
watgpt/scraper/watscraper/watscraper/spiders/: timetable_spider.py
watgpt/scripts/: create_chunk_db.py  create_sql_db.py  create_vector_db.py  db_setup.py  db_usage_example.py  llm_rag_chat.py  query_chunk_db.py  query_vector_db.py  run_scrapy.sh  scrape.py
watgpt/watscraper/: scrapy.cfg
watgpt/watscraper/watscraper/: chunk.py  extract.py  items.py  middlewares.py  pipelines.py  read_calendar_pdf.py  settings.py  text_chunker.py
watgpt/watscraper/watscraper/spiders/: all_files_spider.py  timetable_spider.py
widget-backend/: package-lock.json  package.json  server.js
widget-backend/controllers/: messageController.js
widget-backend/models/: Message.js
widget-backend/routes/: routes.js
widget-extension/: copy-widget.js  package-lock.json  package.json
widget-extension/public/: background.js  content.js  manifest.json
widget-extension/src/: index.js  theme.js
widget-extension/src/components/: Chat.jsx  ChatIcon.jsx  ChatWindow.jsx  ToggleButton.jsx  Widget.jsx
widget-extension/src/components/ChatClose/: ChatIcon.jsx
widget-extension/src/components/ChatOpen/: Chat.jsx  ChatInput.jsx  ChatMessage.jsx  ChatWindow.jsx  Header.jsx
widget-extension/src/store/: store.js  widgetSlice.js
