[tool.poetry]
name = "watgpt"
version = "0.1.0"
description = "The Military University of Technology in Warsaw chatbot"
authors = [
    "KubiakJakub01",
    "LukaszKielczewski66",
    "maciekSzubiczuk"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fitz = "^0.0.1.dev2"
pandas = "^2.2.3"
unidecode = "^1.3.8"
langchain = "^0.3.18"
selenium = "^4.28.1"
beautifulsoup4 = "^4.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
